se terminaron los diseños y se agregaron unas animaciones

--- a/index.html
+++ b/index.html
@@ -1,20 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Inicio</title>
-</head>
-<body>
-    <nav class="navegacion">
-        <a href="xml/ejemplo1.xml">Ejemplo1</a>
-        <a href="xml/ejercicio1a.xml">Ejercicio1a</a>
-        <a href="xml/ejercicio1b.xml">Ejercicio1b</a>
-        <a href="xml/ejemplo2.xml">Ejemplo2</a>
-        <a href="xml/ejercicio2a.xml">Ejercicio2a</a>
-        <a href="xml/ejercicio2b.xml">Ejercicio2b</a>
-    </nav>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <nav class="nav">
+        <ul class="list">
+          <li class="list__item list__item--click">
+            <div class="list__button list__button--click">
+              <img src="img/docs.svg" alt="xml" class="list__img" />
+              <a href="#" class="nav__link">XML</a>
+              <img src="img/arrow.svg" alt="arrow" class="list__arrow" />
+            </div>
+            <ul class="list__show">
+              <li class="list__inside">
+                <a
+                  href="xml/ejemplo1.xml"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejemplo1</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="xml/ejercicio1a.xml"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio1a</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="xml/ejercicio1b.xml"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio1b</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="xml/ejemplo2.xml"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejemplo2</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="xml/ejercicio2a.xml"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio2a</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="xml/ejercicio2b.xml"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio2b</a
+                >
+              </li>
+            </ul>
+          </li>
+
+          <li class="list__item list__item--click">
+            <div class="list__button list__button--click">
+              <img src="img/docs.svg" alt="xml" class="list__img" />
+              <a href="#" class="nav__link">JSON</a>
+              <img src="img/arrow.svg" alt="arrow" class="list__arrow" />
+            </div>
+            <ul class="list__show">
+              <li class="list__inside">
+                <a
+                  href="json/ejemplo1.json"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejemplo1</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="json/ejercicio1a.json"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio1a</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="json/ejercicio1b.json"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio1b</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="json/ejemplo2.json"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejemplo2</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="json/ejercicio2a.json"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio2a</a
+                >
+              </li>
+              <li class="list__inside">
+                <a
+                  href="json/ejercicio2b.json"
+                  target="_blank"
+                  class="nav__link nav__link--inside"
+                  >Ejercicio2b</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <div class="informacion">
+        <p name="Elaborado por: ">Luis Alonso Cornejo Jimenez</p>
+        <p name="Carnet: ">CJ18011</p>
+        <p name="Guia 31:">Documento_XML_bien_Formado</p>
+        <p name="Docente: ">Ing. Balmore Ortiz</p>
+        <p name="Grupo: ">05</p>
+      </div>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
 </html>
